have some little problem whith "Add card"

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <section class="board">
         <div class="container">
             <div class="board__inner">
-                <div class="board-block board-todo">
+                <div class="board-block to_do">
                     <div class="board-block__title">To Do</div>
                     <ul class="board-block__list"></ul>
                     <div class="add__wrapper">
                         <button class="board-block__add-card">Add a card</button>
                     </div>
                 </div>
-                <div class="board-block board-progress">
+                <div class="board-block in_progress">
                     <div class="board-block__title">In Progress</div>
                     <ul class="board-block__list">
                     </ul>
@@ -28,7 +28,7 @@
                         <button class="board-block__add-card">Add a card</button>
                     </div>
                 </div>
-                <div class="board-block board-testing">
+                <div class="board-block testing">
                     <div class="board-block__title">Testing</div>
                     <ul class="board-block__list">
                         
@@ -37,7 +37,7 @@
                         <button class="board-block__add-card">Add a card</button>
                     </div>
                 </div>
-                <div class="board-block board-done">
+                <div class="board-block done">
                     <div class="board-block__title">Done</div>
                     <ul class="board-block__list">
                        
