--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         </div>
 
     </section>
-    <form id="login" class="admission__form">
+    <form class="admission__form">
         <input class="admission__login" type="text" placeholder="Login" name="identifier">
         <input class="admission__password" type="password" placeholder="Password" name="password">
         <button class="admission__btn">Log in</button>
     </form>
-    <form id="registration" class="registr__form">
+    <form class="registr__form">
         <input class="registr__email" type="text" placeholder="Email" name="email">
         <input class="registr__login" type="text" placeholder="Login" name="identifier">
         <input class="registr__password" type="password" placeholder="Password" name="password">
