--- a/index.html
+++ b/index.html
@@ -50,18 +50,30 @@
         </div>
 
     </section>
-    <form id="login" class="admission__form">
-        <input class="admission__login" type="text" placeholder="Login" name="identifier">
-        <input class="admission__password" type="password" placeholder="Password" name="password">
-        <button class="admission__btn">Log in</button>
-    </form>
-    <form id="registration" class="registr__form">
-        <input class="registr__email" type="text" placeholder="Email" name="email">
-        <input class="registr__login" type="text" placeholder="Login" name="identifier">
-        <input class="registr__password" type="password" placeholder="Password" name="password">
-        <button class="registr__btn">Log up</button>
-    </form>
-    <form class="modal-create hide">
+    <div class="admission__block">
+        <form id="login" class="admission__form">
+            <input class="admission__login" type="text" placeholder="Login" name="identifier">
+            <input class="admission__password" type="password" placeholder="Password" name="password">
+            <button class="admission__btn">Log in</button>
+        </form>
+        <div class="admission__btn-reg">
+            <span>or</span>
+            <button class="admission__reg">Log up</button>
+        </div>
+    </div>
+    <div class="registr__block">
+        <form id="registration" class="registr__form">
+            <input class="registr__email" type="text" placeholder="Email" name="email">
+            <input class="registr__login" type="text" placeholder="Login" name="identifier">
+            <input class="registr__password" type="password" placeholder="Password" name="password">
+            <button class="registr__btn">Log up</button>
+        </form>
+        <div class="registr__btn-log">
+            <span>or</span>
+            <button class="registr__log">Log in</button>
+        </div>
+    </div>
+    <form class="modal-create">
         <input class="modal-create__title" type="text" placeholder="Title" name="title">
         <input class="modal-create__descr" type="text" placeholder="Description" name="description">
         <div class="modal-create__btns">
@@ -69,6 +81,10 @@
             <button class="modal-create__close">Cancel</button>
         </div>
     </form>
+    <div class="modal-error">
+        <p class="modal-error__message">Sorry, something went wrong, check your input data</p>
+        <button class="modal-error__close">Ok, close</button>
+    </div>
     <script src="index.js"></script>
 </body>
 
