added background to form and fixed additing

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <button class="registr__log">Log in</button>
         </div>
     </div>
-    <form class="modal-create">
+    <div class="overlay-modal hide"></div>
+    <form class="modal-create hide">
         <input class="modal-create__title" type="text" placeholder="Title" name="title">
         <input class="modal-create__descr" type="text" placeholder="Description" name="description">
         <div class="modal-create__btns">
