--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </section>
     <form class="modal-create hide">
         <input class="modal-create__title" type="text" placeholder="Title" name="title">
+        <div class="modal-create__title-error hide">The title cannot be empty.</div>
         <input class="modal-create__descr" type="text" placeholder="Description" name="description">
         <div class="modal-create__btns">
             <button class="modal-create__done">Create</button>
