--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,7 +48,6 @@
                 </div>
             </div>
         </div>
-
     </section>
     <section class="registration">
         <div class="admission__block">
